--- a/index.html
+++ b/index.html
@@ -4,148 +4,95 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Black Force 007 Club</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali&display=swap" rel="stylesheet">
   <style>
-    /* ---------------- General Styles ---------------- */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Noto Sans Bengali', sans-serif;
-    }
-    body {
-      background: #0d0d0d;
-      color: #f1f1f1;
-      line-height: 1.6;
-    }
-    a {
-      color: #ffd700;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    h1, h2, h3, h4 {
-      margin-bottom: 10px;
-      color: #ffcc00;
-    }
-    p {
-      margin-bottom: 15px;
-    }
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: auto;
-      padding: 20px 0;
-    }
-    hr {
-      border: 0.5px solid #555;
-      margin: 20px 0;
-    }
+    /* ---------------- General ---------------- */
+    * { margin:0; padding:0; box-sizing:border-box; font-family:'Noto Sans Bengali', sans-serif;}
+    html { scroll-behavior: smooth;}
+    body { background: #0a0a0a; color:#f5f5f5; line-height:1.6;}
+    a { color: #ffd700; text-decoration:none; transition:0.3s;}
+    a:hover { color:#fff; text-decoration:underline;}
 
     /* ---------------- Header ---------------- */
     header {
-      background: #111;
-      padding: 20px 0;
-      text-align: center;
-      border-bottom: 2px solid #ffcc00;
+      background: linear-gradient(135deg, #0d0d0d, #111111);
+      text-align:center;
+      padding:40px 20px;
+      border-bottom:3px solid #ffcc00;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-    header p {
-      font-size: 1.1rem;
-      color: #ccc;
-    }
+    header h1 { font-size:3rem; color:#ffcc00; margin-bottom:10px; text-shadow: 2px 2px 4px #000;}
+    header p { font-size:1.2rem; color:#ccc; max-width:800px; margin:auto;}
 
-    /* ---------------- Navigation ---------------- */
+    /* ---------------- Navbar ---------------- */
     nav {
-      display: flex;
-      justify-content: center;
-      background: #222;
-      padding: 10px 0;
-      gap: 20px;
-      flex-wrap: wrap;
+      position: sticky;
+      top:0;
+      background:#111;
+      display:flex;
+      justify-content:center;
+      gap:15px;
+      padding:12px 0;
+      z-index:100;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
     }
     nav a {
-      font-weight: bold;
-      padding: 8px 15px;
-      background: #333;
-      border-radius: 5px;
-      transition: 0.3s;
+      padding:8px 16px;
+      background:#222;
+      border-radius:6px;
+      font-weight:bold;
+      transition:0.3s;
     }
-    nav a:hover {
-      background: #ffcc00;
-      color: #000;
-    }
+    nav a:hover { background:#ffcc00; color:#000; }
 
-    /* ---------------- Section ---------------- */
-    section {
-      padding: 30px 0;
-      border-bottom: 1px solid #444;
-    }
-    .committee, .area-committee, .contact {
-      background: #111;
-      padding: 20px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-    .committee h2, .area-committee h3 {
-      color: #ffd700;
-      margin-bottom: 15px;
-    }
+    /* ---------------- Container ---------------- */
+    .container { width:90%; max-width:1200px; margin:auto; padding:30px 0; }
 
-    /* ---------------- Committee Grid ---------------- */
-    .committee-grid, .area-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
+    /* ---------------- Sections ---------------- */
+    section { padding:40px 0; border-bottom:1px solid #333; }
+    section h2, section h3 { color:#ffd700; margin-bottom:20px; text-align:center; text-shadow:1px 1px 3px #000; }
+    section p { margin-bottom:10px; }
+
+    /* ---------------- Cards ---------------- */
+    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px,1fr)); gap:20px; }
+    .card {
+      background: linear-gradient(135deg, #1a1a1a, #222);
+      padding:20px;
+      border-radius:12px;
+      transition: transform 0.3s, box-shadow 0.3s;
+      box-shadow:0 4px 12px rgba(0,0,0,0.5);
     }
-    .committee-card, .area-card {
-      background: #222;
-      padding: 15px;
-      border-radius: 10px;
-      transition: 0.3s;
-    }
-    .committee-card:hover, .area-card:hover {
-      background: #333;
-      transform: translateY(-5px);
-    }
-    .committee-card p, .area-card p {
-      margin: 5px 0;
-    }
+    .card:hover { transform: translateY(-8px); box-shadow:0 8px 20px rgba(0,0,0,0.7);}
+    .card strong { color:#ffcc00; }
+
+    /* ---------------- Contact ---------------- */
+    .contact a { color:#ffcc00; }
+    .contact a:hover { color:#fff; text-decoration:underline; }
 
     /* ---------------- Footer ---------------- */
     footer {
-      background: #111;
-      text-align: center;
-      padding: 20px 0;
-      border-top: 2px solid #ffcc00;
+      background:#111;
+      text-align:center;
+      padding:25px 20px;
+      border-top:3px solid #ffcc00;
     }
-    footer p {
-      margin-bottom: 10px;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-    .socials a {
-      margin: 0 10px;
-      font-weight: bold;
-      color: #ffd700;
-    }
-    .socials a:hover {
-      color: #fff;
-    }
+    footer p { color:#ccc; margin-bottom:10px; }
+    .socials a { margin:0 10px; color:#ffd700; font-weight:bold; transition:0.3s;}
+    .socials a:hover { color:#fff; }
+
+    /* ---------------- Animations ---------------- */
+    .fade-in { opacity:0; animation:fadeIn 1.5s forwards; }
+    @keyframes fadeIn { 100% {opacity:1;} }
   </style>
 </head>
 <body>
 
   <!-- Header -->
-  <header>
+  <header class="fade-in">
     <h1>Black Force 007</h1>
-    <p>স্বাগতম Black Force 007' Club ⚖️! আমরা সত্য ও ন্যায়ের পথে সমাজের উন্নতি ও অপরাধের বিরুদ্ধে লড়াই করি।</p>
+    <p>স্বাগতম Black Force 007' Club ⚖️! আমরা সত্য ও ন্যায়ের পথে সমাজের উন্নতি ও অপরাধের বিরুদ্ধে লড়াই করি। আমাদের সঙ্গে যোগ দিয়ে একটি সুন্দর ও নিরাপদ ভবিষ্যৎ গড়ুন।</p>
   </header>
 
-  <!-- Navigation -->
+  <!-- Navbar -->
   <nav>
     <a href="#home">Home</a>
     <a href="#committee">Committee</a>
@@ -155,11 +102,11 @@
 
   <div class="container">
 
-    <!-- Main Section -->
+    <!-- Home / Committee -->
     <section id="home">
       <h2>BF 007 CLUB COMMITTEE</h2>
-      <div class="committee-grid">
-        <div class="committee-card">
+      <div class="grid">
+        <div class="card">
           <p><strong>Managing Directors:</strong> Sk Rejuyan, Sk Sabir Ali, Sk Azim</p>
           <p><strong>Assistant Managing Director:</strong> Sk Nur Islam</p>
           <p><strong>Youth Network:</strong> ******</p>
@@ -176,63 +123,60 @@
     <section id="area">
       <h2>Black Force 007™ Area Committee</h2>
 
-      <div class="area-committee">
-        <h3>Area 1</h3>
-        <div class="area-grid">
-          <div class="area-card">
-            <p><strong>Managing Director:</strong> *****</p>
-            <p><strong>Youth Network:</strong> ****</p>
-            <p><strong>Secretary:</strong> Sk Somir | Sk Kader Ali</p>
-            <p><strong>President:</strong> Sk Aktar Ali</p>
-            <p><strong>Vice President:</strong> Sk Babusona</p>
-            <p><strong>General Secretary:</strong> Sk Nur Hossen</p>
-            <p><strong>Assistant Secretary:</strong> Sk Arjil</p>
-            <p><strong>Organizing Secretary:</strong> Sk Saruk</p>
-            <p><strong>Media Secretary:</strong> Sk Johir | Sk Abjul</p>
-            <p><strong>News Exchange:</strong> **** ** *** *****</p>
-          </div>
+      <!-- Area 1 -->
+      <h3>Area 1</h3>
+      <div class="grid">
+        <div class="card">
+          <p><strong>Managing Director:</strong> *****</p>
+          <p><strong>Youth Network:</strong> ****</p>
+          <p><strong>Secretary:</strong> Sk Somir | Sk Kader Ali</p>
+          <p><strong>President:</strong> Sk Aktar Ali</p>
+          <p><strong>Vice President:</strong> Sk Babusona</p>
+          <p><strong>General Secretary:</strong> Sk Nur Hossen</p>
+          <p><strong>Assistant Secretary:</strong> Sk Arjil</p>
+          <p><strong>Organizing Secretary:</strong> Sk Saruk</p>
+          <p><strong>Media Secretary:</strong> Sk Johir | Sk Abjul</p>
+          <p><strong>News Exchange:</strong> **** ** *** *****</p>
         </div>
       </div>
 
-      <div class="area-committee">
-        <h3>Area 2</h3>
-        <div class="area-grid">
-          <div class="area-card">
-            <p><strong>Managing Director:</strong> ******</p>
-            <p><strong>Youth Network:</strong> ****</p>
-            <p><strong>Secretary:</strong> Sk Sabir | Sk Salman</p>
-            <p><strong>President:</strong> Sk Nur Islam</p>
-            <p><strong>Vice President:</strong> Sk Minhaj | Motu</p>
-            <p><strong>Organizing Secretary:</strong> Sk Soidul</p>
-            <p><strong>Media Secretary:</strong> Sk Arman | Sk Arif | Sk Selim | Sk Imran/chand</p>
-            <p><strong>News Exchange:</strong> **** ** *** *****</p>
-          </div>
+      <!-- Area 2 -->
+      <h3>Area 2</h3>
+      <div class="grid">
+        <div class="card">
+          <p><strong>Managing Director:</strong> ******</p>
+          <p><strong>Youth Network:</strong> ****</p>
+          <p><strong>Secretary:</strong> Sk Sabir | Sk Salman</p>
+          <p><strong>President:</strong> Sk Nur Islam</p>
+          <p><strong>Vice President:</strong> Sk Minhaj | Motu</p>
+          <p><strong>Organizing Secretary:</strong> Sk Soidul</p>
+          <p><strong>Media Secretary:</strong> Sk Arman | Sk Arif | Sk Selim | Sk Imran/chand</p>
+          <p><strong>News Exchange:</strong> **** ** *** *****</p>
         </div>
       </div>
 
-      <div class="area-committee">
-        <h3>Area 3</h3>
-        <div class="area-grid">
-          <div class="area-card">
-            <p><strong>Managing Director:</strong> ******</p>
-            <p><strong>Youth Network:</strong> ****</p>
-            <p><strong>Secretary:</strong> Sk Sukur | Sk Rajab</p>
-            <p><strong>President:</strong> Sk Abid</p>
-            <p><strong>Assistant Secretary:</strong> -</p>
-            <p><strong>General Secretary:</strong> -</p>
-            <p><strong>Assistant General Secretary:</strong> Sk Jakir</p>
-            <p><strong>Organizing Secretary:</strong> Sk Azim | Sk Miraj</p>
-            <p><strong>Media Secretary:</strong> Sk Monirul | Sk Aslam</p>
-            <p><strong>News Exchange:</strong> **** ** *** *****</p>
-          </div>
+      <!-- Area 3 -->
+      <h3>Area 3</h3>
+      <div class="grid">
+        <div class="card">
+          <p><strong>Managing Director:</strong> ******</p>
+          <p><strong>Youth Network:</strong> ****</p>
+          <p><strong>Secretary:</strong> Sk Sukur | Sk Rajab</p>
+          <p><strong>President:</strong> Sk Abid</p>
+          <p><strong>Assistant Secretary:</strong> -</p>
+          <p><strong>General Secretary:</strong> -</p>
+          <p><strong>Assistant General Secretary:</strong> Sk Jakir</p>
+          <p><strong>Organizing Secretary:</strong> Sk Azim | Sk Miraj</p>
+          <p><strong>Media Secretary:</strong> Sk Monirul | Sk Aslam</p>
+          <p><strong>News Exchange:</strong> **** ** *** *****</p>
         </div>
       </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact -->
     <section id="contact">
       <h2>Contact Us</h2>
-      <div class="contact">
+      <div class="card contact">
         <p><strong>WhatsApp Chat:</strong> 9163207300</p>
         <p><strong>Email:</strong> <a href="mailto:blackforce007.official@gmail.com">blackforce007.official@gmail.com</a></p>
         <p><strong>Website:</strong> www.blackforce007.com (Coming)</p>
