--- a/index.html
+++ b/index.html
@@ -1,6 +1,58 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+  <!-- Core Committee Update -->
+<section id="core-committee" class="section-dark">
+  <div class="container">
+    <h2 class="section-title">কমিটি চেঞ্জ হচ্ছে</h2>
+    <table style="width:100%; border-collapse:collapse; color:#f1f1f1;">
+      <thead>
+        <tr style="background:#222;">
+          <th style="padding:10px; text-align:left;">পদ</th>
+          <th style="padding:10px; text-align:left;">নাম</th>
+          <th style="padding:10px; text-align:left;">দায়িত্ব / কাজ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="background:#1a1a1a;">
+          <td>Managing Director</td>
+          <td>Sk Rejuyan</td>
+          <td>সর্বোচ্চ প্রশাসনিক দায়িত্ব পালন, সিদ্ধান্ত গ্রহণ</td>
+        </tr>
+        <tr style="background:#222;">
+          <td>Managing Director</td>
+          <td>Sk Sabir Ali</td>
+          <td>অর্থ ও কার্যক্রম পর্যবেক্ষণ, পরিচালনা</td>
+        </tr>
+        <tr style="background:#1a1a1a;">
+          <td>Managing Director</td>
+          <td>Sk Azim</td>
+          <td>নিয়ম ও নীতি নির্ধারণ, দলের দিকনির্দেশনা</td>
+        </tr>
+        <tr style="background:#222;">
+          <td>Assistant Managing Director</td>
+          <td>Sk Nur Islam</td>
+          <td>Managing Directors কে সহায়তা, কার্যক্রম সমন্বয়</td>
+        </tr>
+        <tr style="background:#1a1a1a;">
+          <td>President</td>
+          <td>Sk Minhaj</td>
+          <td>দলের সম্মেলন ও নীতিনির্ধারণে নেতৃত্ব</td>
+        </tr>
+        <tr style="background:#222;">
+          <td>Vice President</td>
+          <td>Sk Rajab Ali</td>
+          <td>President কে সহায়তা, দলের কার্যক্রম পর্যবেক্ষণ</td>
+        </tr>
+        <tr style="background:#1a1a1a;">
+          <td>Secretary</td>
+          <td>Sk Yasir</td>
+          <td>নথি, রিপোর্ট, যোগাযোগ এবং মিটিং-এর ব্যবস্থাপনা</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Black Force 007 Club - সত্য ও ন্যায়ের পথে</title>
