--- a/index.html
+++ b/index.html
@@ -920,4 +920,59 @@
     fadeInOnScroll();
   </script>
 </body>
+  <!-- ======= Footer ======= -->
+<footer id="footer">
+  <div class="container footer-container">
+    <!-- About -->
+    <div class="footer-about">
+      <div class="footer-logo"><i class="fas fa-shield-alt"></i> Black Force 007</div>
+      <p>সত্য ও ন্যায়ের পথে সমাজের উন্নতি ও অপরাধের বিরুদ্ধে লড়াই করা আমাদের লক্ষ্য।</p>
+    </div>
+
+    <!-- Quick Links -->
+    <div class="footer-links">
+      <h4>দ্রুত লিঙ্ক</h4>
+      <ul>
+        <li><a href="#home">হোম</a></li>
+        <li><a href="#about">আমাদের সম্পর্কে</a></li>
+        <li><a href="#committee">কমিটি</a></li>
+        <li><a href="#area">এলাকা কমিটি</a></li>
+        <li><a href="#contact">যোগাযোগ</a></li>
+      </ul>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="footer-contact">
+      <h4>যোগাযোগ</h4>
+      <ul>
+        <li><i class="fab fa-whatsapp"></i> 9163207300</li>
+        <li><i class="fas fa-envelope"></i> <a href="mailto:blackforce007.official@gmail.com">blackforce007.official@gmail.com</a></li>
+        <li><i class="fas fa-globe"></i> www.blackforce007.com</li>
+        <li><i class="fas fa-robot"></i> Blackforce007 AI</li>
+        <li><i class="fas fa-hand-holding-usd"></i> 9163207300-1@okbizaxis</li>
+      </ul>
+    </div>
+
+    <!-- Social Media -->
+    <div class="footer-social">
+      <h4>সামাজিক যোগাযোগ</h4>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Copyright -->
+  <div class="copyright">
+    <p>© 2025 Black Force 007. All Rights Reserved.</p>
+  </div>
+</footer>
+
+<!-- Scroll to Top -->
+<div class="scroll-to-top" id="scrollToTop">
+  <i class="fas fa-chevron-up"></i>
+</div>
 </html>
