--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         </tr>
         <tr style="background:#222;">
           <td>Assistant Managing Director</td>
-          <td>Sk Nur Islam</td>
+          <td>pending</td>
           <td>Managing Directors কে সহায়তা, কার্যক্রম সমন্বয়</td>
         </tr>
         <tr style="background:#1a1a1a;">
           <td>President</td>
-          <td>Sk Minhaj</td>
+          <td>pending</td>
           <td>দলের সম্মেলন ও নীতিনির্ধারণে নেতৃত্ব</td>
         </tr>
         <tr style="background:#222;">
           <td>Vice President</td>
-          <td>Sk Rajab Ali</td>
+          <td>pending Ali</td>
           <td>President কে সহায়তা, দলের কার্যক্রম পর্যবেক্ষণ</td>
         </tr>
         <tr style="background:#1a1a1a;">
@@ -665,14 +665,14 @@
       <div class="committee-grid">
         <div class="committee-card fade-in">
           <h3>কেন্দ্রীয় কমিটি</h3>
-          <p><i class="fas fa-user-tie"></i> <strong>Managing Directors:</strong> Sk Rejuyan, Sk Sabir Ali, Sk Azim</p>
-          <p><i class="fas fa-user-check"></i> <strong>Assistant Managing Director:</strong> Sk Nur Islam</p>
+          <p><i class="fas fa-user-tie"></i> <strong>Managing Directors:</strong> Sk Rejuyan, pending Ali, Sk Azim</p>
+          <p><i class="fas fa-user-check"></i> <strong>Assistant Managing Director:</strong> pending</p>
           <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ******</p>
           <p><i class="fas fa-gavel"></i> <strong>Against Crime:</strong> ******</p>
           <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> ******</p>
           <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Yasir</p>
-          <p><i class="fas fa-crown"></i> <strong>President:</strong> Sk Minhaj</p>
-          <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> Sk Rajab Ali</p>
+          <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
+          <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
         </div>
       </div>
     </div>
@@ -689,10 +689,10 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> *****</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Somir | Sk Kader Ali</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Somir |pending</p>
             <p><i class="fas fa-crown"></i> <strong>President:</strong> Sk Aktar Ali</p>
-            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> Sk Babusona</p>
-            <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> Sk Nur Hossen</p>
+            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
+            <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> pending</p>
             <p><i class="fas fa-user-check"></i> <strong>Assistant Secretary:</strong> Sk Arjil</p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Saruk</p>
             <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Johir | Sk Abjul</p>
@@ -707,11 +707,11 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> ******</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Sabir | Sk Salman</p>
-            <p><i class="fas fa-crown"></i> <strong>President:</strong> Sk Nur Islam</p>
-            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> Sk Minhaj | Motu</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> pending | pending</p>
+            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
+            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Soidul</p>
-            <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Arman | Sk Arif | Sk Selim | Sk Imran/chand</p>
+            <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Arman | Sk Arif | Sk Selim | pending</p>
             <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> **** ** *** *****</p>
           </div>
         </div>
@@ -723,11 +723,11 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> ******</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Sukur | Sk Rajab</p>
-            <p><i class="fas fa-crown"></i> <strong>President:</strong> Sk Abid</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Sukur | pending</p>
+            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
             <p><i class="fas fa-user-check"></i> <strong>Assistant Secretary:</strong> -</p>
             <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> -</p>
-            <p><i class="fas fa-user-check"></i> <strong>Assistant General Secretary:</strong> Sk Jakir</p>
+            <p><i class="fas fa-user-check"></i> <strong>Assistant General Secretary:</strong> pending</p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Azim | Sk Miraj</p>
             <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Monirul | Sk Aslam</p>
             <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> **** ** *** *****</p>
