--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </tr>
         <tr style="background:#222;">
           <td>Managing Director</td>
-          <td>Sk Sabir Ali</td>
+          <td> pending </td>
           <td>অর্থ ও কার্যক্রম পর্যবেক্ষণ, পরিচালনা</td>
         </tr>
         <tr style="background:#1a1a1a;">
@@ -31,22 +31,22 @@
         </tr>
         <tr style="background:#222;">
           <td>Assistant Managing Director</td>
-          <td>pending</td>
+          <td> pending </td>
           <td>Managing Directors কে সহায়তা, কার্যক্রম সমন্বয়</td>
         </tr>
         <tr style="background:#1a1a1a;">
           <td>President</td>
-          <td>pending</td>
+          <td> pending </td>
           <td>দলের সম্মেলন ও নীতিনির্ধারণে নেতৃত্ব</td>
         </tr>
         <tr style="background:#222;">
           <td>Vice President</td>
-          <td>pending Ali</td>
+          <td> pending </td>
           <td>President কে সহায়তা, দলের কার্যক্রম পর্যবেক্ষণ</td>
         </tr>
         <tr style="background:#1a1a1a;">
           <td>Secretary</td>
-          <td>Sk Yasir</td>
+          <td> Sk Yasir</td>
           <td>নথি, রিপোর্ট, যোগাযোগ এবং মিটিং-এর ব্যবস্থাপনা</td>
         </tr>
       </tbody>
@@ -665,14 +665,14 @@
       <div class="committee-grid">
         <div class="committee-card fade-in">
           <h3>কেন্দ্রীয় কমিটি</h3>
-          <p><i class="fas fa-user-tie"></i> <strong>Managing Directors:</strong> Sk Rejuyan, pending Ali, Sk Azim</p>
-          <p><i class="fas fa-user-check"></i> <strong>Assistant Managing Director:</strong> pending</p>
+          <p><i class="fas fa-user-tie"></i> <strong>Managing Directors:</strong> Sk Rejuyan, pending, Sk Azim</p>
+          <p><i class="fas fa-user-check"></i> <strong>Assistant Managing Director:</strong> pending </p>
           <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ******</p>
           <p><i class="fas fa-gavel"></i> <strong>Against Crime:</strong> ******</p>
           <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> ******</p>
           <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Yasir</p>
-          <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
-          <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
+          <p><i class="fas fa-crown"></i> <strong>President:</strong> pending </p>
+          <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending </p>
         </div>
       </div>
     </div>
@@ -689,10 +689,10 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> *****</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Somir |pending</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Somir | pendingn </p>
             <p><i class="fas fa-crown"></i> <strong>President:</strong> Sk Aktar Ali</p>
-            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
-            <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> pending</p>
+            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending </p>
+            <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> pending </p>
             <p><i class="fas fa-user-check"></i> <strong>Assistant Secretary:</strong> Sk Arjil</p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Saruk</p>
             <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Johir | Sk Abjul</p>
@@ -707,9 +707,9 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> ******</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> pending | pending</p>
-            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
-            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> pending | pending </p>
+            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending </p>
+            <p><i class="fas fa-user-friends"></i> <strong>Vice President:</strong> pending </p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Soidul</p>
             <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Arman | Sk Arif | Sk Selim | pending</p>
             <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> **** ** *** *****</p>
@@ -723,11 +723,11 @@
           <div class="area-card">
             <p><i class="fas fa-user-tie"></i> <strong>Managing Director:</strong> ******</p>
             <p><i class="fas fa-network-wired"></i> <strong>Youth Network:</strong> ****</p>
-            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Sukur | pending</p>
-            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending</p>
+            <p><i class="fas fa-user-edit"></i> <strong>Secretary:</strong> Sk Sukur | pending </p>
+            <p><i class="fas fa-crown"></i> <strong>President:</strong> pending </p>
             <p><i class="fas fa-user-check"></i> <strong>Assistant Secretary:</strong> -</p>
             <p><i class="fas fa-tasks"></i> <strong>General Secretary:</strong> -</p>
-            <p><i class="fas fa-user-check"></i> <strong>Assistant General Secretary:</strong> pending</p>
+            <p><i class="fas fa-user-check"></i> <strong>Assistant General Secretary:</strong> pending </p>
             <p><i class="fas fa-sitemap"></i> <strong>Organizing Secretary:</strong> Sk Azim | Sk Miraj</p>
             <p><i class="fas fa-photo-video"></i> <strong>Media Secretary:</strong> Sk Monirul | Sk Aslam</p>
             <p><i class="fas fa-newspaper"></i> <strong>News Exchange:</strong> **** ** *** *****</p>
